--- a/index.html
+++ b/index.html
@@ -6,74 +6,41 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="css/styles.css" rel="stylesheet">
+    <link href="scss/_hamburger.css" rel="stylesheet">
     <link href="assets/icon-m.png" rel="icon">
     <title>M A N I F E S T</title>
 </head>
 <body>
 
 <header class="header wrapper">
-    <nav class="nav">
+    <div class="header__logo">
         <img class="nav__logo" src="assets/logo.svg" alt="logo-icon">
-
-        <div class="nav__menu">
-            <ul class="list">
-                <li class="list__item">
-                    <a class="list__item-link" href="#">home</a>
-                </li>
-                <li class="list__item">
-                    <a class="list__item-link" href="#">about</a>
-                </li>
-                <li class="list__item">
-                    <a class="list__item-link" href="#">works</a>
-                </li>
-                <li class="list__item">
-                    <a class="list__item-link" href="#">blog</a>
-                </li>
-                <li class="list__item">
-                    <a class="list__item-link" href="#">contact</a>
-                </li>
-            </ul>
-
-            <button class="nav__search" type="submit">
-                <img src="assets/search.svg" alt="icon">
-            </button>
-
-            <div class="hamburger">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
-
-            <script>
-                const hamburgerElm = document.querySelector(".hamburger");
-                const navElm = document.querySelector(".list");
-
-                hamburgerElm.addEventListener("click", () => {
-                    hamburgerElm.classList.toggle("active");
-                    navElm.classList.toggle("active");
-                });
-            </script>
-
-            <!--            <div class="nav__hamburger">-->
-            <!--                <input type="checkbox" id="check-menu" class="check-menu">-->
-            <!--                <label for="check-menu"></label>-->
-            <!--                <span class="burger-line first"></span>-->
-            <!--                <span class="burger-line second"></span>-->
-            <!--                <span class="burger-line third"></span>-->
-            <!--                <span class="burger-line fourth"></span>-->
-
-            <!--                <nav class="main-menu">-->
-            <!--                    <a href="#">home</a>-->
-            <!--                    <a href="#">about</a>-->
-            <!--                    <a href="#">works</a>-->
-            <!--                    <a href="#">blog</a>-->
-            <!--                    <a href="#">contact</a>-->
-            <!--                </nav>-->
-            <!--            </div>-->
-
-        </div>
+    </div>
+    <nav>
+        <button class="hamburger hamburger--collapse" type="button">
+            <span class="hamburger-box">
+                <span class="hamburger-inner"></span>
+            </span>
+        </button>
+        <ul class="nav">
+            <li class="nav__item"><a class="nav__item__link" href="#">home</a></li>
+            <li class="nav__item"><a class="nav__item__link" href="#">about</a></li>
+            <li class="nav__item"><a class="nav__item__link" href="#">works</a></li>
+            <li class="nav__item"><a class="nav__item__link" href="#">blog</a></li>
+            <li class="nav__item"><a class="nav__item__link" href="#">contact</a></li>
+        </ul>
     </nav>
 </header>
+
+<script>
+    const hamburgerElm = document.querySelector('.hamburger');
+    const navElm = document.querySelector('.nav');
+
+    hamburgerElm.addEventListener('click', () => {
+        hamburgerElm.classList.toggle('is-active');
+        navElm.classList.toggle('is-active');
+    });
+</script>
 
 <main>
 
